--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "babel-loader": "8.0.6",
     "babel-plugin-named-asset-import": "^0.3.5",
     "babel-preset-react-app": "^9.1.0",
+    "bootstrap": "^4.4.1",
     "camelcase": "^5.3.1",
     "case-sensitive-paths-webpack-plugin": "2.2.0",
     "css-loader": "3.2.0",
@@ -51,9 +52,11 @@
     "random-seed": "^0.3.0",
     "react": "^16.12.0",
     "react-app-polyfill": "^1.0.5",
+    "react-bootstrap": "^1.0.0-beta.16",
     "react-dev-utils": "^10.0.0",
     "react-dom": "^16.12.0",
     "react-redux": "^7.1.3",
+    "react-router-dom": "^5.1.2",
     "react-shuffle": "^2.1.0",
     "redux": "^4.0.5",
     "redux-logger": "^3.0.6",
