--- a/package.json
+++ b/package.json
@@ -156,12 +156,13 @@
     "enzyme": "^3.11.0",
     "enzyme-adapter-react-16": "^1.15.2",
     "enzyme-to-json": "^3.4.4",
-    "react-test-renderer": "^16.12.0",
-    "sinon": "^8.1.1",
-    "sinon-chai": "^3.4.0",
     "jest": "24.9.0",
     "jest-environment-jsdom-fourteen": "0.1.0",
     "jest-resolve": "24.9.0",
-    "jest-watch-typeahead": "0.4.2"
+    "jest-watch-typeahead": "0.4.2",
+    "mock-socket": "^9.0.3",
+    "react-test-renderer": "^16.12.0",
+    "sinon": "^8.1.1",
+    "sinon-chai": "^3.4.0"
   }
 }
